# jvp

./: Cargo.toml  Makefile.toml  docker-compose.yml
api/: Cargo.toml
api/assets/: swagger.html
api/config/: default.toml
api/src/: config.rs  main.rs  prelude.rs  response.rs  settings.rs
api/src/controllers/: health.rs  mod.rs  openapi.rs  root.rs  swagger.rs
api/src/error/: api_error.rs
api/src/states/: settings.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  logger.rs
common/src/rmq/: client.rs  error.rs  message.rs  mod.rs  pool.rs  server.rs
ms-calendar/: Cargo.toml
ms-calendar/config/: default.toml
ms-calendar/src/: config.rs  main.rs  prelude.rs  settings.rs
ms_calendar/: Cargo.toml
ms_calendar/src/: main.rs  prelude.rs  settings.rs
