[workspace]
members = ["api", "ms_calendar", "common"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
api = { path = "./api" }
common = { path = "./common" }
ms_calendar = { path = "./ms_calendar" }

tokio = { version = "1.24.2", features = ["full"] }
thiserror = "1.0.40"
config = { version = "0.13.3", features = ["toml"] }
