[package]
name = "api"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jvp-api"
path = "src/main.rs"

[dependencies]
common = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
axum = { version = "0.6.3", features = ["headers"] }
hyper = { version = "0.14.23", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = "1.0.95"
validator = { version = "0.16.0", features = ["derive"] }
async-trait = "0.1.68"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
http-serde = "1.1.2"
aide = { version = "0.11.0", features = ["axum"] }
rust-embed = "6.6.1"
