[package]
name = "common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
config = { version = "0.13.3", features = ["toml"] }
