[package]
name = "jvp-ms-calendar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "jvp-ms-calendar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
